--- a/index.html
+++ b/index.html
@@ -28,18 +28,12 @@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
                     <a href="javascript:;">
-                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img"><span class="tx txx">A</span> <span class="hy">LikeYou</span>
+                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img"><span class="tx txx">A</span> <span>个人中心   </span>
                     </a>
                     <dl class="layui-nav-child">
-                        <dd>
-                            <a href="javascript:;">基本资料</a>
-                        </dd>
-                        <dd>
-                            <a href="javascript:;">更换头像</a>
-                        </dd>
-                        <dd>
-                            <a href="javascript:;">重置密码</a>
-                        </dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_via.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -83,16 +77,16 @@
                         </a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="javascript:;">
+                                <a href="./user/user_info.html" target="fm">
                                     <i class="layui-icon layui-icon-app"></i> 基本资料
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="/user/user_via.html" target="fm">
                                     <i class="layui-icon layui-icon-app"></i>更换头像</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="./user/user_pwd.html" target="fm">
                                     <i class="layui-icon layui-icon-app"></i>重置密码</a>
                             </dd>
                         </dl>
